--- a/index.html
+++ b/index.html
@@ -22,7 +22,31 @@
             requiered
             autocomplete="off"
             class="instructions"
+            id="topic"
           />
+          <input
+            type="text"
+            placeholder="Do you want to write fiction or non-fiction?"
+            autofocus
+            requiered
+            autocomplete="off"
+            class="expand"
+            id="fiction-nonfiction"
+          />
+          <input
+            type="text"
+            placeholder="Tell me something you love ex: music, politics, football!"
+            autofocus
+            requiered
+            autocomplete="off"
+            class="expand"
+            id="topics-you-love"
+          />
+          <div class="hint">
+            i.e: I want to write about my holidays, creating a fictional short
+            story and I love dogs
+          </div>
+
           <input type="submit" class="submit-button" />
         </form>
         <div class="prompt" id="prompts"></div>
