--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
             class="expand"
             id="topics-you-love"
           />
-          <div class="hint">
-            i.e: I want to write about my holidays, creating a fictional short
-            story and I love dogs
-          </div>
+          <div class="hint">i.e: Topic: Holidays, fiction, love: dogs.</div>
 
           <input type="submit" class="submit-button" />
         </form>
