--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         open-source on
         <a href="https://github.com/InesParis/spanish-poem-generator">GitHub</a>
         and it is hoested on
-        <a href="https://spanishpoemgeneratorexample.netlify.app/">Netlify</a>
+        <a href="https://promptsforwriting.netlify.app/">Netlify</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
